everything but image replacement working. custom fonts work.

--- a/GradedCaseExpander.csproj
+++ b/GradedCaseExpander.csproj
@@ -36,6 +36,9 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>lib\UnityEngine.UI.dll</HintPath>
     </Reference>
+    <Reference Include="TextureReplacer">
+      <HintPath>lib\TextureReplacer.dll</HintPath>
+    </Reference>
     <Compile Remove="references/**/*.cs" />
     <Compile Remove="reference_code/**/*.cs" />
     <Compile Remove="Generator/**/*.cs" />
