--- a/GradedCaseExpander.csproj
+++ b/GradedCaseExpander.csproj
@@ -12,7 +12,7 @@
       https://nuget.bepinex.dev/v3/index.json;
       https://nuget.samboy.dev/v3/index.json
     </RestoreAdditionalProjectSources>
-    <RootNamespace>ArtExpander</RootNamespace>
+    <RootNamespace>GradedCaseExpander</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
